[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "musicfm"
description = "MusicFM: A Foundation Model for Music Informatics"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "einops",
  "torch>=2",
  "torchaudio>=2",
  "transformers",
]
requires-python = ">=3.9"

[project.optional-dependencies]
code-style = ["black>=22.9.0", "flake8>=5"]
tests = ["pytest>=6", "mock"]
type-check = ["mypy==1.10", "pydantic>=1.10", "types-tqdm", "types-mock", "types-setuptools"]

[tool.setuptools.dynamic]
version = {attr = "musicfm.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
klay_data = ["*.typed"]

[tool.pytest.ini_options]
norecursedirs = "submodules/*"

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
  "numpy.typing.mypy_plugin",
]

[[tool.mypy.overrides]]
module = [
  "torch.*",
  "torchaudio.*",
  "transformers",
]
ignore_missing_imports = true
